Opened 16 years ago

Closed 16 years ago

#3169 closed bug (fixed)

[bootman] Default partition is not set correctly when some partitions are masked

Reported by: oco Owned by: axeld
Priority: normal Milestone: R1
Component: Applications Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Here is my partition layout :

  • Windows pre-install partition
  • Windows partition
  • Haiku partition

If i uncheck the pre-install partition in the partition list and if i select Haiku as the default partition, no selector is shown on boot. I have to use up arrow key to finally see the selector.

The default partition index is relative to the plain partition list, but should be relative to visible partitions only when written on the boot sector.

Here is a patch to fix this small problem.

Attachments (1)

LegacyBootDrive.cpp_r28723.diff (784 bytes ) - added by oco 16 years ago.

Download all attachments as: .zip

Change History (2)

comment:1 by laplace, 16 years ago

Resolution: fixed
Status: newclosed

Applied in hrev29626. Thank you.

Note: See TracTickets for help on using tickets.