Applied patch of ticket #3169 by oco: Set default partition correctly.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29626 a95241bf-73f2-0310-859d-f6bbb57e9c96